--- a/app/views/post/index.html.erb
+++ b/app/views/post/index.html.erb
@@ -1,1 +1,9 @@
-index.html.erb
+<form action ="edit" method="post">
+  First name:<br>
+  <input type="text" name="firstname" value="Mickey">
+  <br>
+  Last name:<br>
+  <input type="text" name="lastname" value="Mouse">
+  <br><br>
+  <input type="submit" value="Submit">
+</form>
