--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,16 +7,15 @@
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
-  
+
 
   <div class="topnav" id="myTopnav">
       <!-- TODO: make it the ruby way -->
-    <a href="#">Home</a>
+    <a href= '/'>Home</a>
     <!-- TODO: make it the ruby way -->
-    <a href="post">Post</a>
-    <%= link_to("Button", destroy_user_session_path, method: :delete) %>
+    <a href="/posts/index">Post</a>
     <%= link_to("Logout", destroy_user_session_path, method: :delete) %>
-    
+
   </div>
 
   <body>
