--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
-<%= link_to("<<Back to List", post_path, :class => 'back-link') %>
+<%= link_to "Back", :back %>
+
 <h2> Show Post </h2>
 <p><%= @post.title %> </p>
