--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
 <%= link_to "Back", :back %>
-
 <h2> Show Post </h2>
-<p><%= @post.title %> </p>
+<p><%= @posts_title %> </p>
+<p><%= @posts_content %> </p>
