--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+
 <div class="posts index">
   <h2> Posts </h2>
   <%= link_to("Create a New Post", new_post_path, :class => 'action new') %>
@@ -8,8 +9,8 @@
       <td><%= post.content %></td>
       <td class="actions">
         <%= link_to("Show", post_path(post), :class => 'action show') %>
-        <%= link_to("Edit", '#', :class => 'action edit') %>
-        <%= link_to("Delete", '#', :class => 'action delete') %>
+        <%= link_to("Edit", edit_post_path(post), :class => 'action edit') %>
+        <%= link_to 'Destroy', post_path(post), data: {:confirm => 'Are you sure?'}, :method => :delete %>
       </td>
     </tr>
     <% end %>
