--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,1 +1,48 @@
-<!-- raul's form code will be here  -->
+<!-- params.require(:post).permit(:title, :admin_message, :content, :sender_id) -->
+
+<%= form_for @post do |f| %>
+  <h2>Who would you like to review?</h2>
+  <%= f.collection_select :recipient_id, User.order(:first_name),:id,:first_name, include_blank: true %>
+
+  <br>
+  <h2>What should the cadre know to help them improve?</h2>
+  <br>
+  <%= text_area_tag(:admin_message, "Hi, nice site", size: "44x6") %>
+  <br>
+  <h2>Was working with them a positive experience?</h2>
+  <br>
+  <%= radio_button_tag(:age, "child") %>
+  <%= label_tag(:age_child, "Yes") %>
+  <br>
+  <%= radio_button_tag(:age, "adult") %>
+  <%= label_tag(:age_adult, "No") %>
+  <br>
+  <br>
+  <h2>Would you ever work with them again?</h2>
+  <br>
+  <%= radio_button_tag(:age, "child") %>
+  <%= label_tag(:age_child, "Never Again") %>
+  <br>
+  <%= radio_button_tag(:age, "adult") %>
+  <%= label_tag(:age_adult, "If I had to") %>
+  <br>
+  <%= radio_button_tag(:age, "child") %>
+  <%= label_tag(:age_child, "Sure why not") %>
+  <br>
+  <%= radio_button_tag(:age, "adult") %>
+  <%= label_tag(:age_adult, "Yes I'd like to") %>
+  <br>
+  <%= radio_button_tag(:age, "adult") %>
+  <%= label_tag(:age_adult, "Always put us together!") %>
+  <br>
+  <h2>Overall how would rate working with them?</h2>
+  <!-- TODO:create slider -->
+  <%= f.label :rating %>
+  <%= f.number_field :rating %><br />
+  <%= f.label :title %>
+  <%= f.text_field :title %><br />
+  <h2><h2>What are they doing great, what could they do better?</h2>
+  <%= text_area_tag(:message, "Hi, nice site", size: "44x6") %>
+  <br>
+  <%= f.submit %>
+<% end %>
