--- a/app/views/posts/create.html.erb
+++ b/app/views/posts/create.html.erb
@@ -6,7 +6,7 @@
     <% if post.title present? %>
       <td class="actions">
         <%= link_to("Show", post_path(post), :class => 'action show') %>
-        <%= link_to("Edit", '#', :class => 'action edit') %>
+        <%= link_to("Edit", edit_post_path(post), :class => 'action edit') %>
       </td>
 
     <% end %>
