--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,1 +1,16 @@
-<p> in edit.html <%= @user %></p>
+<h2>Edit Post</h2>
+
+<!-- <p><%= @user_first %> <%= @user_last %>, you are currently editiing the following post:</p>
+
+<p><%= @posts_title %></p>
+<p><%= @posts_content %></p>
+ -->
+<!-- <p><%= @post.title %></p> -->
+
+<p><%= form_for(@post) do |f| %>
+      <%= f.label :title %>
+      <%= f.text_field :title, class: 'form-control' %>
+      <%= f.label :content %>
+      <%= f.text_field :content, class: 'form-control' %>
+      <%= f.submit "Save Changes", class: "btn btn-primary" %>
+      <% end %>
