--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,3 +33,46 @@
   .radio-group{
     padding-left: 80px;
   }
+
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    width: 110%;
+
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: left; 
+    display: block;
+    color: #f2f2f2;
+    padding-left: 100px;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    margin-left: 10%;
+
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+.topnav .navbar-nav {
+  display: inline-block;
+  float: none;
+  vertical-align: top;
+}
+
+.topnav .navbar-collapse {
+  text-align: center;
+}
