addin nav bar links

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,1 +1,1 @@
-<a href="../home/index"><img alt="logo" id="imgLogo" src="../../assets/cp_logo"></a>
+<a href="/"><img alt="logo" id="imgLogo" src="../../assets/cp_logo"></a>
