--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,3 +1,4 @@
 <a href= '/'>Home</a>
-<%= link_to("Post", new_post_path, method: :get) %>
+<%= link_to("View Post", new_post_path, method: :get) %>
+<%= link_to("New Post", new_post_path, method: :get) %>
 <%= link_to("Logout", destroy_user_session_path, method: :delete) %>
