cleaned up directory

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -2,3 +2,6 @@
 <%= link_to("View Post", '/', method: :get) %>
 <%= link_to("New Post", new_post_path, method: :get) %>
 <%= link_to("Logout", destroy_user_session_path, method: :delete) %>
+<%if current_user.admin %>
+  <%= link_to("Admin", destroy_user_session_path, method: :delete) %>
+<%end %>
