--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,1 +1,1 @@
-<a href="/"><img alt="logo" id="imgLogo" src="../../assets/cp_logo.jpeg"></a>
+<a href="/"><img alt="logo" id="imgLogo" src="../../assets/images/cp_logo.jpeg"></a>
