--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,1 +1,1 @@
-<a href="/"><img alt="logo" id="imgLogo" src="../../assets/images/cp_logo.jpeg"></a>
+<a href="/"><img alt="logo" id="imgLogo" src="https://github.com/rvasqz86/Pairing/blob/master/app/assets/images/cp_logo.jpeg?raw=true"></a>
