--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,7 +17,7 @@
     <% end %>
   </table>
 
-  <table class="listing2" summary="Post list2">
+  <table class="listing" summary="Post list">
   <h2> Sent Posts </h2>
     <tr>
       <th> Title </th>
