--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,12 +10,12 @@
   <%= @post.willing_to_work %>
 </p>
 
-<p>
+<p class="show-header">
   <strong>Rating</strong></br>
   <%= @post.rating %>
 </p>
 
-<p>
+<p class="show-header">
   <strong>Title</strong></br>
   <%= @post.title %>
 </p>
