adding mailer for passwords

--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -9,7 +9,8 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
+    <br>
+    <%= f.submit "Resend confirmation instructions", class: "btn btn-primary" %>
   </div>
 <% end %>
 
