--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 
-<%= link_to 'New Article', new_post_path %>
+<%= link_to 'Write a new review', new_post_path %>
 <div class="posts index">
-  <h2> Received Posts </h2>
+  <h2> Received Reviews </h2>
   <table class="listing" summary="Post list">
     <tr>
       <th> Title </th>
@@ -18,7 +18,7 @@
   </table>
 
   <table class="listing" summary="Post list">
-  <h2> Sent Posts </h2>
+  <h2> Reviews I have written </h2>
     <tr>
       <th> Title </th>
       <th> Content </th>
