--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -21,7 +21,7 @@ prohibited
   <br>
   <%= f.text_area :admin_message, style: 'width:100%;',:placeholder => "Jon, I think xyz is getting overwhelmed" %>
   <br>
-  <h2>Would you ever work with them again?</h2>
+  <h2>Would you want to pair with them again?</h2>
   <br>
   <div class="radio-group">
     <%= f.radio_button :willing_to_work, "Never" %>
@@ -43,9 +43,9 @@ prohibited
   <h2>Overall how would rate working with them [0 - 5]?</h2>
   <%= f.range_field :rating, :min=>0, :max=>5, :class=>"slide", :id=>"slider1"%>
   <%= f.label :Challenge%>
-  <%= f.text_field :title, style: 'width:100%;', :placeholder => "Paindrome" %><br />
+  <%= f.text_field :title, style: 'width:100%;', :placeholder => "Palindrome" %><br />
   <h2><h2>What are they doing great, what could they do better?</h2>
-  <%= f.text_area :content, style: 'width:100%;', :placeholder => "Hi, nice work but I felt that I did not have enough input. I think you talk to much. I think you talk too little. I think you should ask for help more often, it's okay to no " %>
+  <%= f.text_area :content, style: 'width:100%;', :placeholder => "Hi, nice work but I felt that I you did not allow me to have enough input.  You should try to listen more.  Your should express your ideas more. I think you should ask for help more often, it's okay to not know something. " %>
 
   <br>
   <%= f.submit "submit", class: "btn btn-primary" %>
