--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<h2>Post</h2>
+<h2>Review</h2>
 <%= link_to "Back", :back %>
 <p>
   <strong>Feedback</strong></br>
@@ -6,7 +6,7 @@
 </p>
 
 <p>
-  <strong>Would you ever work with them again?</strong></br>
+  <strong>Would you want to pair with them again?</strong></br>
   <%= @post.willing_to_work %>
 </p>
 
